Revert "More editor and layout bugs fixed"
This reverts commit df320c39b18f45e3e776ab2e2509d264b5575e22.

--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ h1 {
 	
 	font-size: 10em;
 	padding: 0;
-	margin: 0;
+	margin: 0 0 -.2em 0;
 	color: #ff0000;
 	text-shadow: 0 0 10px #000;
 }
@@ -333,7 +333,7 @@ div.block {
 
 div.buttonRows {
 	
-	margin-top: 1em;
+	margin-top: 3em;
 }
 
 a.menuButton:hover, a.menuButton.active,
